profile_feed_skeleton_done

--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,10 @@
     transform: rotate(360deg);
   }
 }
+
+.post {
+  border: solid;
+  margin-left: 25%;
+  margin-right: 25%;
+  margin-top: 2%;
+}
