--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,10 @@
   text-align: center;
 }
 
+* {
+  font-family: electrolize;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -39,7 +43,47 @@
 
 .post {
   border: solid;
-  margin-left: 25%;
-  margin-right: 25%;
+  margin-left: 35%;
+  margin-right: 35%;
   margin-top: 2%;
+  display: flex;
+  /* align-items: center; */
+  background-color: wheat;
+}
+
+.logo {
+  margin-right: 25%;
+}
+
+.nav-buttons {
+  margin-left: 25%
+}
+
+.profile-picture {
+  margin-right: 25%;
+}
+
+#profile-pic {
+  border-radius: 50%;
+}
+
+.profile-header {
+  background-color: rgb(204, 206, 111);
+}
+
+.profile-feed{
+  background-color: pink;
+}
+
+.post-text {
+  display: flex;
+  flex-direction: column;
+  justify-content: right;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+}
+
+.post-caption {
+  border: solid;
 }
