--- a/src/App.css
+++ b/src/App.css
@@ -41,54 +41,7 @@
   }
 }
 
-.post {
-  border: solid;
-  margin-left: 35%;
-  margin-right: 35%;
-  margin-top: 2%;
+.nav-bar {
   display: flex;
-  /* align-items: center; */
-  background-color: wheat;
-}
-
-.logo {
-  margin-right: 25%;
-}
-
-.nav-buttons {
-  margin-left: 25%
-}
-
-.profile-picture {
-  margin-right: 25%;
-}
-
-#profile-pic {
-  border-radius: 50%;
-}
-
-.profile-header {
-  background-color: rgb(204, 206, 111);
-}
-
-.profile-feed{
-  background-color: pink;
-}
-
-.post-text {
-  display: flex;
-  flex-direction: column;
-  justify-content: right;
-  width: 100%;
-  height: 100%;
-  text-align: center;
-}
-
-.post-caption {
-  border: solid;
-}
-
-.delete-button {
-  position: relative;
-  top: 200px;
+  justify-content: center;
 }
