--- a/src/App.css
+++ b/src/App.css
@@ -48,6 +48,10 @@
   background: rgb(211, 208, 208);
 }
 
+.nav-logo {
+  cursor: pointer;
+}
+
 .nav-search {
   display: flex;
   align-items: center;
