follow, delete pic look good

--- a/src/App.css
+++ b/src/App.css
@@ -64,6 +64,10 @@
   cursor: pointer;
 }
 
+.sign-up-button {
+  cursor: pointer;
+}
+
 .profile-header {
   display: flex;
   justify-content: center;
