--- a/src/App.css
+++ b/src/App.css
@@ -45,7 +45,9 @@
   display: flex;
   align-items: center;
   justify-content: space-around;
-  background: rgb(211, 208, 208);
+  background: rgb(255, 253, 253);
+  border-bottom: solid;
+  border-width: thin;
 }
 
 .nav-logo {
@@ -57,11 +59,15 @@
   align-items: center;
 }
 
-.nav-buttons {
+.nav-buttons-container {
   display: flex;
   justify-content: space-around;
   align-items: center;
   cursor: pointer;
+}
+
+.nav-button {
+  margin-right: 10%;
 }
 
 .sign-up-button {
@@ -71,7 +77,7 @@
 .profile-header {
   display: flex;
   justify-content: center;
-  background: rgb(49, 48, 47);
+  background: rgb(255, 254, 251);
 }
 
 .profile-picture {
@@ -81,7 +87,7 @@
 }
 
 .header-bio {
-  color: aliceblue;
+  color: rgb(4, 17, 27);
 }
 
 .profile-header-buttons {
@@ -94,9 +100,10 @@
 }
 
 .profile-feed {
-  display: flex;
-  justify-content: space-evenly;
-  flex-wrap: wrap;
+  display: grid;
+  justify-content: center;
+  /* flex-wrap: wrap; */
+  background: rgb(255, 250, 245);
 }
 
 .post {
@@ -104,6 +111,7 @@
   border-style: solid;
   max-width: min-content;
   margin-top: 1%;
+  overflow: scroll;
 }
 
 
@@ -120,4 +128,5 @@
 .post-comment-section {
   border-bottom: solid;
   border-width: thin;
+  overflow: scroll;
 }
